# python-project-lvl1

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml  pyproject.toml.save
asciinemas/: brain-games-install.cast
brain_games/: bg_even.py  calc.py  cli.py  engine.py  even.py  even_settings.py  messages.py  settings.py
brain_games/games/: calc.py  even.py  game.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain-even.py  brain_calc.py  brain_even.py  brain_game.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
stepanenkoartem_brain_games.egg-info/: PKG-INFO  SOURCES.txt
