[tool.poetry]
name = "stepanenkoartem-brain-games"
version = "0.2.0"
description = "Brain-games:: Hexlet Python Project lvl-1"
authors = ["Artem Stepanenko <artem.stepanenko.ks.ua@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.5"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
