[tool.poetry]
name = "stepanenkoartem-brain-games"
version = "0.2.15"
description = "Brain-games:: Hexlet Python Project lvl-1"
authors = ["Artem Stepanenko <artem.stepanenko.ks.ua@gmail.com>"]
classifiers = [
	"Environment :: Console",
	"Programming Language :: Python"
]
packages = [
  {include = "brain_games"}
]
repository = "https://github.com/StepanenkoArtem/python-project-lvl1"

[tool.poetry.dependencies]
python = "^3.5"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_game:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
[[tool.poetry.source]]
name = "testPyPi"
url = "https://test.pypi.org/legacy/"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

